events-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventservice
  template:
    metadata:
      labels:
        app: eventservice
    spec:
      containers:
        - name: eventservice
          image: ghcr.io/hangbuddy/hb-event-service:master
          imagePullPolicy: Always
      imagePullSecrets:
        - name: hangbuddy
---
apiVersion: v1
kind: Service
metadata:
  name: events-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: eventservice
  ports:
    - name: eventservice
      protocol: TCP
      port: 80
      targetPort: 80
